<resources>
    <string name="app_name">Blekinge Studentkår</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="email">styrelsen@bthstudent.se</string>
    <string name="username">Bleking Studentkår</string>
    <string name="news">Nyheter</string>
    <string name="calender">kalender</string>
    <string name="timetable">schema</string>
    <string name="map">Karta</string>
    <string name="administration">Styrelse</string>
    <string name="president">Kårordförande</string>
    <string name="president_name">Samuel Sörensson</string>
    <string name="president_number">0708276162</string>
    <string name="president_mail">ordforande@bthstudent.se</string>
    <string name="vicepresident_name">Victoria Vucic</string>
    <string name="vicepresident_number">0733-146162</string>
    <string name="vicepresident_mail">vice@bthstudent.se</string>
    <string name="vicepresident">vice Kårordförande</string>
    <string name="about">
		Syftet med Android-applikationen är att tillhandahålla en informationskanal till Blekinge studentkårs verksamhet. Detta i hopp om att öka medvetenheten kring organisationen framförallt bland studenter. Applikationen är dock ej begränsad till enbart studenter utan fritt tillgänglig för vem som helst att använda.\n\n

		Vad man kan göra:\n
		* Se nyheter (samt hela artiklar) och händelser från ett antal sektioner som är en del av Blekinge studentkår.\n
		* Av/Prenumerera olika flöden.\n
		* Av/Prenumerera på scheman i kurser du går (eller inte går om du baqra vill hålla koll).\n
		* Komma i kontakt med presidiet. (Man kan till och med trycka på telefonnummer, e-postadresser och URL:er!)\n\n

		Observera: Eftersom applikationen hämtar flöden och artiklar från flera olika ställen på internet rekommenderar vi att man använder sig av en snabb internetförbindelse för att minska nedladdningstiderna.\n\n

		Vill du engagera dig i detta projekt? Ta dig till
		http://sis.bthstudent.se/skunkworks/android_bsk/
	</string>
    <string name="about_title">Blekinge studentkår-appen</string>
    <string name="acronym">Akronym</string>
    <string name="app_name_dev">BSK-dev</string>
    <string name="article_button_text">Öppna inlägg (webb)</string>
    <string name="by">Av</string>
    <string name="cellphone">Mobiltelefon</string>
    <string name="contacts">Kontakter</string>
    <string name="employment">Tjänst</string>
    <string name="empty_schedule">Du måste lägga till ett schema först!</string>
    <string name="end_before_start">Slutdatum får inte vara före startdatum!</string>
    <string name="fetch_news">Hämtar senaste nytt</string>
    <string name="fetch_calendar">Hämtar kommande händelser</string>
    <string name="fetch_contacts">Hämtar kontakter</string>
    <string name="fetch_schedules">Hämtar scheman</string>
    <string name="future">Framtiden......</string>
    <string name="homepage">Hemsida</string>
    <string name="institution">Sektion</string>
    <string name="location">Placering</string>
    <string name="mail">E-post</string>
    <string name="map_my_location">Min position</string>
    <string name="name">Namn</string>
    <string name="no_data">Ingen data att visa. För att kunna lägga till ett schema, tryck på meny-knappen och välj \'Ändra scheman\' och följ instruktionerna där. Läs även hjälpen!</string>
    <string name="no_location_support">Vi kan tyvärr inte se om personen är i sitt rum just nu, men våra kodapor jobbar på att se om det går att lösa i framtiden.</string>
    <string name="not_specified">[Ej angivet]</string>
    <string name="phone">Telefon</string>
    <string name="room">Rum</string>
    <string name="room_image_error">Något gick ohyggligt snett när vi försökte ladda NÅGON bild för det du efterfrågade. Underrätta app-utvecklaren om det inträffade. (Eller försök igen senare)</string>
    <string name="room_info_download_progress">Hämtar lokalinfo</string>
    <string name="room_requested">Sökt rum:</string>
    <string name="schedule_id">Kurskod (tex FY1404) eller\nschema-id (8 siffror)</string>
    <string name="schedule_name">Namn (som beskrivning på schemat)</string>
    <string name="schedule_start">Startdatum</string>
    <string name="schedule_end">Slutdatum</string>
    <string name="schedule_save">Spara</string>
    <string name="schedules">Scheman</string>
    <string name="schedules_add_schedule">Lägg till schema</string>
    <string name="schedules_add_blank_id">ID-fältet får inte vara tomt!</string>
    <string name="schedules_add_blank_name">Namn-fältet får inte vara tomt!</string>
    <string name="schedules_add_only_integers">ID-fältet får bara innehålla siffror! (Glömde du trycka på Sök-knappen?)</string>
    <string name="schedules_help">Hjälp</string>
	<string name="schedules_message">För att kunna använda dig av schema-delen av denna
		app kan du använda dig av två metoder. Den första utgår ifrån att du
		känner till kurskoden på schemat du vill lägga till. Den andra utgår
		ifrån att du inte känner till kurskod eller id för schemat och måste
		söka upp dessa uppgifter på http://schema.bth.se.\n\nMetod ett (känd
		kurskod):\n1: I fältet Schema-id, skriv in kurskoden för kursen du
		vill lägga till, tryck därefter på knappen \"Sök kurs\".\n2: Avvakta
		tills texten i fältet där du skrivit in kurskoden ändras till en
		8-siffrig nummerserie (detta kan ta kortare eller längre tid beroende
		på vilken typ av Internet-anslutning som finns via din enhet).\n3:
		Skriv in en valfri beskrivning för schemat i Namn-fältet och ange ett
		tidsintervall du vill övervaka.\n4: Tryck på knappen
		\"Spara\".\n\nMetod två (okänd kurskod):\nFör att kunna använda dig av
		detta alternativet måste du åtmninstonde ha några uppgifter om kursen;
		tex namnet på kursen eller vem som är kursansvarig. Med hjälp
		av dessa
		uppgifter måste du ta reda på vilket ID schemat har på
		http://schema.bth.se.\n1: Surfa in på http://schema.bth.se\n2: Sök upp
		och titta på schemat för kursen du vill övervaka.\n3: I adressfältet i
		webbläsaren ska du nu leta upp wv_obj1=[8 siffror]. Detta är det ID
		som ska matas in i ID-fältet i appen. Det får bara förekomma siffror
		och de ska vara åtta till antalet. \"Namn\"-fältet är det fritt fram
		att skriva in vad som helst; vi rekommenderar att det beskriver
		schemat på något sätt så det är lätt att hålla reda på.
	</string>
    <string name="schedules_ok">OK</string>
    <string name="schedules_search_button">Sök kurs</string>
    <string name="schedules_search_course_code">Kurskod</string>
    <string name="schedules_settings">Ändra scheman</string>
    <string name="schedules_title">Schema-hjälp</string>
    <string name="settings">Inställningar</string>
    <string name="schedules_settings_no_data">Lägg till ett schema genom att trycka på meny-knappen och välj \'Lägg till schema\'.</string>
    <string name="settings_news">Ställ in nyhetskällor</string>
    <string name="settings_cal">Ställ in kalenderkällor</string>
    <string name="settings_about">Om appen</string>
    <string name="settings_refresh">Tvinga hämtning</string>
    <string name="vice_president">Vice kårordförande</string>
    <string name="week">Vecka</string>

    <string-array name="newsfeedtitles">
        <item>bthstudent.se</item>
        <item>Sexistenz</item>
        <item>SIS</item>
        <item>.smoersex</item>
    </string-array>
    <string-array name="calendarfeedtitles">
        <item>bthstudent.se</item>
        <item>Kårhuset .kauren</item>
        <item>Kårhuset Rotundan</item>
        <item>Sexistenz</item>
        <item>SIS</item>
    </string-array>
    <string-array name="newssettings">
        <item>SettingsNewsBthstudent</item>
        <item>SettingsNewsSexistenz</item>
        <item>SettingsNewsSis</item>
        <item>SettingsNewsSmoersex</item>
    </string-array>
    <string-array name="calendarsettings">
        <item>SettingsCalendarBthstudent</item>
        <item>SettingsKarenKhn</item>
        <item>SettingsKarenKna</item>
        <item>SettingsSexistenz</item>
        <item>SettingsSIS</item>
    </string-array>
</resources>
