<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/news"
            android:checked="false"
            android:icon="@drawable/news"
            android:title="@string/news"
            android:textColor="@color/white"/>

        <item
            android:id="@+id/calender"
            android:checked="false"
            android:icon="@drawable/calender"
            android:title="@string/calender"
            android:textColor="@color/white"/>

        <item
            android:id="@+id/administration"
            android:checked="false"
            android:icon="@drawable/administration"
            android:title="@string/administration"
            android:textColor="@color/white"/>

        <item
            android:id="@+id/timetable"
            android:checked="false"
            android:icon="@drawable/timetable"
            android:title="@string/timetable"
            android:textColor="@color/white"/>


        <item
            android:id="@+id/map"
            android:checked="false"
            android:icon="@drawable/map"
            android:title="@string/map" />
    </group>
</menu>