<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:id="@+id/presidentlayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/president"
            android:textSize="20sp"
            android:textColor="@color/PrimaryColor"
            android:textStyle="bold"
            android:gravity="left"
            android:paddingBottom="4dp"
            android:id="@+id/president_titel"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/president_name"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="left"
            android:paddingBottom="4dp"
            android:id="@+id/president_name"
            android:layout_below="@+id/president_titel"
            android:layout_alignLeft="@+id/president_mail"
            android:layout_alignStart="@+id/president_mail"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/president_mail"
            android:id="@+id/president_mail"
            android:gravity="left"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/president_titel"
            android:layout_alignEnd="@+id/president_titel" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/president_number"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="left"
            android:paddingBottom="4dp"
            android:id="@+id/president_number"
            android:layout_above="@+id/president_mail"
            android:layout_alignLeft="@+id/president_titel"
            android:layout_alignStart="@+id/president_titel" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:id="@+id/vicepresidentlayout"
        android:layout_below="@+id/presidentlayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vicepresident"
            android:textSize="20sp"
            android:textColor="@color/PrimaryColor"
            android:textStyle="bold"
            android:gravity="left"
            android:paddingBottom="4dp"
            android:id="@+id/vicepresident_titel"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vicepresident_number"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="left"
            android:paddingBottom="4dp"
            android:id="@+id/vicepresident_number"
            android:layout_above="@+id/vicepresident_mail"
            android:layout_alignLeft="@+id/vicepresident_mail"
            android:layout_alignStart="@+id/vicepresident_mail" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vicepresident_mail"
            android:id="@+id/vicepresident_mail"
            android:gravity="left"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vicepresident_name"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="left"
            android:paddingBottom="4dp"
            android:id="@+id/vicepresident_name"
            android:layout_below="@+id/vicepresident_titel"
            android:layout_alignLeft="@+id/vicepresident_mail"
            android:layout_alignStart="@+id/vicepresident_mail"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</RelativeLayout>